# Project_DS_Microsoft_Security_Incident_Prediction

./: .gitignore  README.md  README_DATABASE.md  pyproject.toml
config/datasets/: dataset_config.yml
config/pipelines/: classification_pipeline_config.yml  clustering_pipeline_config.yml  regression_pipeline_config.yml  timeseries_pipeline_config.yml
data/raw/test/: link-dataset.txt
notebooks/: MODEL.ipynb  Model_Clasification.ipynb  Test-all-Cat.ipynb  classification_model_notebook.ipynb  clustering_model_notebook.ipynb  data_analysis.ipynb  preview_facade_api.ipynb  test03.ipynb  test04.ipynb  test05.ipynb  test_loader.ipynb
src/crispdm/api/: preview_facade_api.py  run_facade_api.py
src/crispdm/config/: build_factory_config.py  enums_utils_config.py  load_loader_config.py  schema_dto_config.py  validate_validator_config.py
src/crispdm/core/: logging_utils_core.py  seeds_utils_core.py
src/crispdm/data/: load_utils_data.py  profiling_service_data.py  quality_rules_utils_data.py
src/crispdm/pipeline/: clustering_runner_pipeline.py
src/crispdm/reporting/: artifacts_service_reporting.py  audit_service_reporting.py  plots_utils_reporting.py
src/crispdm/stage/: stage2_understanding_runner_stage.py
src/crispml/: __init__.py
src/crispml/common/: __init__.py
src/crispml/common/evaluation/: __init__.py  metrics_classification.py  metrics_clustering.py  metrics_regression.py  (+3 more)
src/crispml/config/: __init__.py  base_config.py
src/crispml/phases/: __init__.py  phase2_data_understanding.py  phase3_data_preparation.py  phase4_modeling.py  phase5_evaluation.py
(+58 files in other folders)
