[project]
name = "project-data-science-microsoft-security-incident-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Catalina",email = "ccequispe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "xgboost (>=3.1.2,<4.0.0)"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = true
packages = [
    { include = "crispdm", from = "src" },
    { include = "crispml", from = "src" }
]
[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.5.3"
jupyter-server = "^2.17.0"
notebook = "^7.5.3"

